Fixed swaync not showing notifcation proparly

--- a/swaync/.config/swaync/notifications.css
+++ b/swaync/.config/swaync/notifications.css
@@ -33,8 +33,20 @@
   padding: 0px;
 }
 
-.floating-notifications.background .notification-row .notification-background .notification.critical {
-  background: @base;       /* translucent blur */
+.floating-notifications.background 
+  .notification-row 
+  .notification-background 
+  .notification.critical,
+.floating-notifications.background 
+  .notification-row 
+  .notification-background 
+  .notification.low,
+.floating-notifications.background 
+  .notification-row 
+  .notification-background 
+  .notification.normal
+  {  
+  background: @surface_custom;       /* translucent blur */
   border-radius: 10px;
   border: 2px solid @primary;
   margin: 5px 10px;
